--- a/app/globals.css
+++ b/app/globals.css
@@ -224,3 +224,13 @@ img {
   -webkit-backface-visibility: hidden;
 }
 
+/* Hide scrollbar for horizontal scroll */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
